--- a/SchoolRegister.DAL/SchoolRegister.DAL.csproj
+++ b/SchoolRegister.DAL/SchoolRegister.DAL.csproj
@@ -1,10 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
- <PropertyGroup>
+ <ItemGroup>
+ <ProjectReference Include="..\SchoolRegister.Model\SchoolRegister.Model.csproj" />
+ </ItemGroup>
+ <ItemGroup>
+   <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+   <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+   <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+     <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+     <PrivateAssets>all</PrivateAssets>
+   </PackageReference>
+   <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.0" />
+   <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+ </ItemGroup>
+<PropertyGroup>
  <TargetFramework>net8.0</TargetFramework>
  <ImplicitUsings>enable</ImplicitUsings>
  <Nullable>enable</Nullable>
  </PropertyGroup>
- <ItemGroup>
- <ProjectReference Include="..\SchoolRegister.Model\SchoolRegister.Model.csproj" />
- </ItemGroup>
 </Project>
