--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SchoolRegister.Web-0b63026c-1c33-4fd4-ba1f-c17b97c84db8;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DefaultConnection":
+  "Server=(localdb)\\mssqllocaldb;Database=Dawid_PawelakAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LogLevel": {
+  "Default": "Information",
+  "Microsoft": "Warning",
+  "Microsoft.Hosting.Lifetime": "Information"
+  }
   },
   "AllowedHosts": "*"
-}
+  }
