--- a/SchoolRegister.ViewModels/SchoolRegister.ViewModels.csproj
+++ b/SchoolRegister.ViewModels/SchoolRegister.ViewModels.csproj
@@ -2,6 +2,9 @@
  <ItemGroup>
  <ProjectReference Include="..\SchoolRegister.Model\SchoolRegister.Model.csproj" />
  </ItemGroup>
+ <ItemGroup>
+   <Folder Include="VM\" />
+ </ItemGroup>
  <PropertyGroup>
  <TargetFramework>net8.0</TargetFramework>
  <ImplicitUsings>enable</ImplicitUsings>
