--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SchoolRegister.Web-c572efde-41df-4a1d-87c0-a30f2521ee40;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DefaultConnection":
+  "Server=(localdb)\\mssqllocaldb;Database={Lukasz_Pisniak}AppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LogLevel": {
+  "Default": "Information",
+  "Microsoft": "Warning",
+  "Microsoft.Hosting.Lifetime": "Information"
+  }
   },
   "AllowedHosts": "*"
-}
+  }
