--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SchoolRegister.Web-62f7102e-9b73-4541-9b6f-fe0347d0bc19;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DefaultConnection":
+  "Server=(localdb)\\mssqllocaldb;Database=Dawid_KurekAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LogLevel": {
+  "Default": "Information",
+  "Microsoft": "Warning",
+  "Microsoft.Hosting.Lifetime": "Information"
+  }
   },
   "AllowedHosts": "*"
-}
+  }
