--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,12 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SchoolRegister.Web-34682d2d-96f9-4038-be7b-4779b6405b11;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "DefaultConnection":  "Server=(localdb)\\mssqllocaldb;Database=Dominik_KupczykAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LogLevel": {
+  "Default": "Information",
+  "Microsoft": "Warning",
+  "Microsoft.Hosting.Lifetime": "Information"
+  }
   },
   "AllowedHosts": "*"
-}
+  }
