--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
   "DefaultConnection":
-  "Server=(localdb)\\mssqllocaldb;Database=Adrian_DrozdzowskiAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "Server=localhost;Database=AdrianDrozdzowski;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
   "LogLevel": {
