--- a/SchoolRegister.Services/SchoolRegister.Services.csproj
+++ b/SchoolRegister.Services/SchoolRegister.Services.csproj
@@ -9,4 +9,10 @@
  <ProjectReference Include="..\SchoolRegister.DAL\SchoolRegister.DAL.csproj" />
  <ProjectReference Include="..\SchoolRegister.ViewModels\SchoolRegister.ViewModels.csproj" />
  </ItemGroup>
+ <ItemGroup>
+   <PackageReference Include="AutoMapper" Version="12.0.0" />
+   <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+   <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.2" />
+   <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+ </ItemGroup>
 </Project>
