--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,13 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tomasz_KobusAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DefaultConnection":
+  "Server=(localdb)\\mssqllocaldb;Database=Piotr_KlimasAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "LogLevel": {
+  "Default": "Information",
+  "Microsoft": "Warning",
+  "Microsoft.Hosting.Lifetime": "Information"
+  }
   },
   "AllowedHosts": "*"
-}
+  }
