--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,14 +1,13 @@
 {
   "ConnectionStrings": {
-  "DefaultConnection":
-  "Server=localhost;Database=AdrianDrozdzowski;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=Adrian_DrozdzowskiAppDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
   },
   "Logging": {
-  "LogLevel": {
-  "Default": "Information",
-  "Microsoft": "Warning",
-  "Microsoft.Hosting.Lifetime": "Information"
-  }
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   },
   "AllowedHosts": "*"
-  }
+}
