--- a/SchoolRegister.Web/appsettings.json
+++ b/SchoolRegister.Web/appsettings.json
@@ -1,12 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SchoolRegister.Web-27efe3c4-05e9-4c41-8d43-15f8da74c2a0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DefaultConnection":
+  "Server=(localdb)\\mssqllocaldb;Database=Aleksandra_GrygielAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LogLevel": {
+  "Default": "Information",
+  "Microsoft": "Warning",
+  "Microsoft.Hosting.Lifetime": "Information"
+  }
   },
   "AllowedHosts": "*"
-}
+  }
